# ChatExtra

./: .build.yml  README.md  VERSION
server/: .gitignore  Cargo.toml  build.rs  config.example.toml
server/.sqlx/: query-04eac5b1b3b78fdcd0a02dfa9b0f6a4435d1c67271869c51d258a11e7659237e.json  query-09849278285b62964e1a0d36e491b459a6c2226daa354f08dd1f0f946b53d2b7.json  query-181d84fa35cf047d9dacbe3f75c96913d67a1845a7d2a4cbd004337f9fd5f570.json  query-20492688503bac8d00e0fa2d143430aac257d06b79ab38df82926eb0bad25ca8.json  query-2592943781ee26c30238d00eb1b565638d8c2fa16eeefa1e4096097c419430b5.json  query-26ef6310a2f303f1fee4b7d66adf44568e67c4915b2491ce1830859067e0462b.json  query-2781fdcbb3a9cd5cbdc640ac664a091e43fc25962db4ec64e0373b7ccb86a554.json  query-35f1a60de834f3320aff3cb81bd97b05bd8921c583f38d03f5ad2e7b93670fc7.json  query-3e3af08d195fc2a915a732a25927de5abb42abb8ea470aab9f7e15a3c04abb6e.json  query-459450d0b1a4e32aef17b2bb22562ec76f7b95b661655a7e42c356e9e2a5bf01.json  query-4b5c62cdc0a7c39e5dda0a330ca7d99f6f2a2b1dbeedde7938db10747c37ac7c.json  query-4ba7e94f70fcd94f9199fa6152e4f1fa0e238db0dae151c5b39baca11fe72aac.json  query-4fb88f130d6cf385322303ee42e3b33dee1ddeabe196fec759fe69a6abafd8e5.json  query-58fead7424c3d342c57abc899775c6f1c421b30f03b6e484bd364ff894217bea.json  query-591203927b9da9f8f438ee322c8604ee797adab613ada94cd95bee04f570c3a6.json  query-6b89f0e6c9571394c490a9f9b473ac278bd8a7e4b6117bc5649db8f270dfa992.json  query-763c5258834fb957e69ae14f05840a7656c259425d90601ea38c7e484fdde64e.json  (+18 more)
server/migrations/: 1_initial_schema.sql  2_caching.sql  4_nickname.sql  (+4 more)
(+159 files in other folders)
