[package]
name = "extra-chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4"
fern = "0.6"
futures-util = "0.3"
hex = "0.4"
lazy_static = "1"
lodestone-scraper = { git = "https://git.anna.lgbt/anna/lodestone-scraper.git" }
log = "0.4"
mimalloc = "0.1"
parking_lot = "0.12"
prefixed-api-key = { git = "https://git.anna.lgbt/anna/prefixed-api-key.git" }
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false }
rmp-serde = "1"
rustyline = { version = "14", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_repr = "0.1"
sha3 = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio-tungstenite = "0.21"
toml = "0.8"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "sync"]
